lang/tests/compile_fail/invalid_program_override.stderr
error: `... = system_program` — field `system_program` is `Program<SystemProgram>`, expected one of: Program<TokenProgram>, Program<Token2022Program>, Interface<TokenInterface>
  --> tests/compile_fail/invalid_program_override.rs:13:5
   |
13 | /     #[account(token(mint = mint, authority = authority, token_program = system_program))]
14 | |     pub vault: Account<Token>,
   | |_____________________________^

error[E0432]: unresolved import `quasar_spl`
 --> tests/compile_fail/invalid_program_override.rs:3:5
  |
3 | use quasar_spl::{TokenProgram, *};
  |     ^^^^^^^^^^ use of unresolved module or unlinked crate `quasar_spl`
  |
  = help: if you wanted to use a crate named `quasar_spl`, use `cargo add quasar_spl` to add it to your `Cargo.toml`
